@@ -19,6 +19,11 @@
 [
   <!-- Internal DTD subset.  Only entities should be defined here. -->
 
+  <!-- Include the QM common DTD module.  -->
+
+  <!ENTITY % qm SYSTEM "../../qm.mod">
+  %qm;
+
   <!-- Commonly-used symbols, terms, and abbreviations specific to
   this document.
 
@@ -47,9 +52,6 @@
 
   -->
 
-  <!ENTITY qmbuild "<application>qmbuild</application>">
-  <!ENTITY qmconfig "<application>qmconfig</application>">
-
   <!-- Organizations, companies, etc. -->
 
   <!ENTITY QR-GNU '<acronym>GNU</acronym>'>
@@ -64,7 +66,7 @@
 
   <!-- Genuine abbreviations, jargon, etc. -->
 
-  <!ENTITY Qapi '<abbrev>API</abbrev>'>
+  <!ENTITY Qapi '<acronym>API</acronym>'>
   <!ENTITY Qgui '<acronym>GUI</acronym>'>
 
   <!-- References to other systems. -->
@@ -104,7 +106,7 @@
   <!ENTITY QFinstallshield '<anchor id="Q-installshield"></anchor>&QFLinstallshield;'>
   <!ENTITY Qinstallshield '<link linkend="Q-installshield">&QRinstallshield;</link>'>
 
-  <!ENTITY QR-LDAP '<abbrev>LDAP</abbrev>'>
+  <!ENTITY QR-LDAP '<acronym>LDAP</acronym>'>
   <!ENTITY QFL-LDAP '&QR-LDAP;'>
   <!ENTITY QF-LDAP '<anchor id="Q-LDAP"></anchor>&QFL-LDAP;'>
   <!ENTITY Q-LDAP '<link linkend="Q-LDAP">&QR-LDAP;</link>'>
@@ -184,7 +186,7 @@
   <!ENTITY QF-Xwin '<anchor id="Q-X"></anchor>&QFL-Xwin;'>
   <!ENTITY Q-Xwin '<link linkend="Q-X">&QR-Xwin;</link>'>
 
-  <!ENTITY QR-XML '<abbrev>XML</abbrev>'>
+  <!ENTITY QR-XML '<acronym>XML</acronym>'>
   <!ENTITY QFL-XML '<ulink url="http://www.xml.com">&QR-XML;</ulink>'>
   <!ENTITY QF-XML '<anchor id="Q-XML"></anchor>&QFL-XML;'>
   <!ENTITY Q-XML '<link linkend="Q-XML">&QR-XML;</link>'>
