@@ -1,3 +1,12 @@
+2000-12-15  R. Lindsay Todd  <toddr@rpi.edu>
+
+	* doc/design/qmconfig/design.xml: Add/fix id's.
+	* doc/design/qmconfig/intro.xml: Likewise.
+	* doc/design/qmconfig/overview.xml: Likewise.
+	* doc/design/qmconfig/requirements.xml: Likewise.
+	* doc/design/qmconfig/design-td.xml: Likewise.  Fix images.
+	* doc/design/qmconfig/qmconfig.xml: Add qm.mod.
+
 2000-12-14  Alex Samuel  <samuel@codesourcery.com>
 
 	* standard.mk ($(PRINTDIR)/$(PRINTPDF)): Return true even if empty
